# modmail

./: .codecov.yml  .env.example  .env.template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEWS.rst  Procfile  README.md  SECURITY.md  aerich.ini  app.json  codecov.yml  docker-compose.yaml  docs.py  launcher.py  main.py  mkdocs.yml  project.toml  pyproject.toml  requirements.txt  tailwind.config.js  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report_bot.yml  bug_report_website.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  changelog.yml  fossa-status.yml  fossa_status.yml  lint.yml  lint_test.yml  news.yml  status_embed.yml  update_requirements_dependabot.yml
changelog_fragments/: _template.md
docs/: .requirements.txt  README.md  changelog.md  contributing.md  missing-translation.md  security.md
docs/addons/: README.md  installation.md  plugins.md
docs/contributing/: creating_an_extension.md
docs/en/: mkdocs.yml
docs/en/docs/: contributing.md  index.md  release-notes.md  security.md
migrations/models/: 0_20211031115120_init.sql  1_20211101070158_update.sql  2_20211120132336_update.sql
modmail/: __init__.py  __main__.py  alembic.ini  bot.py  config-default.toml  config.py  constraints.txt  default_config.toml  default_config.yaml  dispatcher.py  errors.py  log.py  plugin_helpers.py
modmail/addons/: converters.py  errors.py  helpers.py  models.py  plugins.py  utils.py
modmail/alembic/: env.py
modmail/alembic/versions/: 500f4263ffe9_add_tickets_table.py  72459556f7b9_add_configurations_table.py  7b384834cca4_add_emojis_table.py  8d52443a026e_add_attachments_table.py  9dacee669c96_add_embeds_table.py  e6b20ed26bc2_add_messages_table.py
modmail/crud/: configurations.py  messages.py  threads.py
modmail/database/models/: __init__.py  attachments.py  configuration.py  embeds.py  emojis.py  guilds.py  messages.py  servers.py  stickers.py  tickets.py
modmail/extensions/: configuration_manager.py  core.py  debug.py  extension_manager.py  meta.py  plugin_manager.py  threads.py
modmail/extensions/utils/: error_handler.py  help.py  help_command.py  paginator_cleaner.py  paginator_manager.py
modmail/exts/: core.py  meta.py
modmail/exts/extensions/: _base_class.py  _cogs.py  _plugins.py  cogs.py
modmail/exts/utils/: extensions.py  plugin_manager.py
modmail/models/: __init__.py  attachments.py  base.py  configurations.py  embeds.py  emojis.py  messages.py  tickets.py
modmail/plugins/: .gitignore  __init__.py  helpers.py
modmail/plugins/local/: README.md  readme.md
modmail/utils/: __init__.py  cogs.py  converters.py  decorators.py  dispatcher.py  embeds.py  errors.py  extensions.py  general.py  messages.py  pagination.py  plugin_manager.py  plugins.py  responses.py  threads.py  time.py  users.py
modmail/utils/addons/: converters.py  models.py  plugins.py  sources.py
modmail/utils/threads/: __init__.py  decorators.py  embeds.py  errors.py  models.py
modmail_cli/: __main__.py  docs.py
news/: latest.md
news/next/: README.md  pr-65.bug.RFwfXL.md
news/next/bugfix/: 2021-10-16.pr-70.internal.-pHKF1.md
news/next/bugfixes/: 2021-10-16.pr-77.bugfixes.2OV3m_.md
news/next/feature/: 2021-12-14.pr-119.md  2021-12-14.pr-121.md  2021-12-14.pr-71.md  2021-12-14.pr-89.md
news/next/features/: 2021-10-16.pr-13.features.nrKe2p.md  2021-10-16.pr-19.features.SqoIZV.md  2021-10-16.pr-50.features.6zI2Dq.md
news/next/improvement/: 2021-12-14.pr-78.md
news/next/internal/: 2021-10-16.pr-70.internal.-pHKF1.md
scripts/: __main__.py  _utils.py  docs.py  export_new_config_to_default_config.py  export_requirements.py
scripts/news/: README.md  __init__.py  __main__.py  config.toml  constants.py  default_config.toml  default_template.rst.jinja  template.md.jinja  utils.py
scripts/news/check_news_workflow/: __main__.py
site/: 404.html  index.html  main.py  sitemap.xml  tailwind.config.js
site/contributing/: index.html
site/release-notes/: index.html
site/search/: search_index.json
src/: tailwind.css
static/: custom.css  delete-me.txt
templates/: index.html
tests/: conftest.py  docs.md  mocks.py  test_bot.py  test_fixtures.py  test_logs.py  test_makebot.py  test_mocks.py  test_test.py  utils.py
tests/modmail/: conftest.py  test.env  test_bot.py  test_config.py  test_dispatcher.py  test_log.py  test_logs.py
tests/modmail/addons/: test_converters.py  test_models.py  test_plugins.py  test_utils.py
tests/modmail/extensions/: test_extension_manager.py  test_plugin_manager.py  test_threads.py  threads.py
tests/modmail/extensions/utils/: test_error_handler.py
tests/modmail/plugins/: README.md  __init__.py  test1.toml
tests/modmail/plugins/working_plugin/: working_plug.py
tests/modmail/utils/: test_dispatcher.py  test_embeds.py  test_general.py  test_pagination.py  test_responses.py  test_time.py
tests/modmail/utils/addons/: test_converters.py  test_models.py  test_sources.py
tests/modmail/utils/threads/: test_decorators.py  test_models.py
tests/resources/: README.md
tests/resources/modmail/modmail-plugins-1/Plugins/: plugin.toml
tests/resources/modmail/modmail-plugins-1/Plugins/planet/: planet.py
website/: constants.py  main.py  site.py  tailwind.config.js
