[tool.poetry]
name = "Modmail"
version = "0.1.0"
description = "A modmail bot for Discord. Python 3.8+ compatiable"
license = "MIT"
authors = ["aru <genericusername414@gmail.com>", "bast <bast@fastmail.com"]
maintainers = ["aru <genericusername414@gmail.com>"]
readme = "README.md"
repository = "https://github.com/discord-modmail/modmail"
homepage = "https://github.com/discord-modmail/modmail"
keywords = ["discord", "modmail"]
include = ["CHANGELOG.md", "env.template"]
packages = [{ include = "modmail" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = { extras = ["speedups"], version = "^3.7.4" }
arrow = "^1.1.1"
colorama = "^0.4.3"
coloredlogs = "^15.0"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "master" }
pydantic = { version = "^1.8.2", extras = ["dotenv"] }
toml = "^0.10.2"
# HACK: Poetry uses requests to install git dependencies, which are not explicitly installed when `--no-dev`
# is set in docker, and hence is needed to successfully install discord.py from git
requests = ">=2.7.9"

[tool.poetry.extras]


[tool.poetry.dev-dependencies]
# always needed
pre-commit = "~=2.1"
taskipy = "^1.6.0"
# linting
black = "^21.7b0"
flake8 = "~=3.8"
flake8-annotations = "~=2.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "~=20.1"
flake8-docstrings = "~=1.5"
flake8-isort = "^4.0.0"
flake8-string-format = "~=0.3"
flake8-tidy-imports = "~=4.1"
flake8-todo = "~=0.7"
isort = "^5.9.2"
pep8-naming = "~=0.11"
# technically not for linting, but used to enforce f-string usage and ensure not using deprecated features
pyupgrade = "^2.24.0"
# testing
codecov = "^2.1.11"
coverage = { extras = ["toml"], version = "^5.5" }
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-dependency = "^0.5.1"
pytest-docs = "^0.1.0"
pytest-xdist = { version = "^2.3.0", extras = ["psutil"] }
# Documentation
mkdocs = ">=1.1.2,<2.0.0"
mkdocs-material = ">=7.1.9,<8.0.0"
mkdocs-markdownextradata-plugin = ">=0.1.7,<0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source_pkgs = ["modmail"]
omit = ["modmail/plugins/**.*"]

[tool.pytest.ini_options]
addopts = "--cov -ra"
minversion = "6.0"
testpaths = ["tests"]

[tool.black]
line-length = 110
target-version = ['py38']
include = '\.pyi?$'

[tool.taskipy.tasks.export]
cmd = """
echo 'Exporting installed packages to requirements.txt.\n\
This task automatically relocks the lock file using "poetry lock --no-update"' && \
poetry lock --no-update && \
echo '# Do not manually edit.\n# Generate with "poetry run task export"\n' > requirements.txt && \
echo "Exporting..." && \
poetry export --without-hashes >> requirements.txt && \
echo "Done exporting."
"""
help = "Export installed packages in requirements.txt format"

[tool.taskipy.tasks]
black = { cmd = "black --check .", help = "dry run of black" }
codecov-validate = { cmd = "curl --data-binary @.codecov.yml https://codecov.io/validate", help = "Validate `.codecov.yml` with their api." }
pre_cov-server = "coverage html"
cov-server = { cmd = "python -m http.server 8012 --bind 127.0.0.1 --directory htmlcov", help = "Start an http.server for viewing coverage data."}
docs = { cmd = "mkdocs serve", help = "Run the docs on a local automatically reloading server"}
flake8 = { cmd = "python -m flake8", help = "Lints code with flake8" }
lint = { cmd = "pre-commit run --all-files", help = "Checks all files for CI errors" }
precommit = { cmd = "pre-commit install --install-hooks", help = "Installs the precommit hook" }
pytest-docs = { cmd = "pytest --no-cov --docs tests/docs.md", help = "Create docs for tests using pytest-docs." }
report = { cmd = "coverage report", help = "Show coverage report from previously run tests." }
start = { cmd = "python -m modmail", help = "Run bot" }
test = { cmd = "pytest -n auto --dist loadfile --cov-report= --cov= --docs tests/docs.md", help = "Runs tests and save results to a coverage report" }
test-nocov = { cmd = "pytest --no-cov", help = "Runs tests without creating a coverage report" }
